--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-example",
+  "name": "foodsconnected-ui-library",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,10 +29,12 @@
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.2",
     "eslint": "^8.1.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^12.0.1",
     "msw": "^0.35.0",
     "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "typescript": "^4.5.5"
   },
   "msw": {
     "workerDirectory": "public"
