--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
@@ -25,9 +26,20 @@
     "@storybook/addon-jest": "^6.4.14",
     "@storybook/addon-links": "^6.4.14",
     "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/addon-storyshots": "^6.4.14",
     "@storybook/builder-webpack5": "^6.4.14",
     "@storybook/manager-webpack5": "^6.4.14",
     "@storybook/react": "^6.4.14",
+    "@storybook/react-testing": "^0.0.3",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "github:testing-library/user-event",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.4.2",
     "babel-loader": "^8.2.2",
     "eslint": "^8.1.0",
@@ -36,7 +48,9 @@
     "eslint-plugin-storybook": "^0.5.6",
     "msw": "^0.35.0",
     "postcss": "^8.4.5",
+    "react-test-renderer": "^17.0.2",
     "tailwindcss": "^3.0.15",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "msw": {
