--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "foodsconnected-ui-library",
   "version": "0.1.0",
   "private": true,
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +15,8 @@
     "lint": "next lint",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test:generate-output": "jest --json --outputFile=.jest-test-results.json"
+    "test:generate-output": "jest --json --outputFile=.jest-test-results.json",
+    "buildrollup": "rollup -c"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.3",
@@ -21,6 +28,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-image": "^2.1.1",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@storybook/addon-actions": "^6.4.14",
     "@storybook/addon-essentials": "^6.4.14",
     "@storybook/addon-jest": "^6.4.14",
@@ -49,6 +59,10 @@
     "msw": "^0.35.0",
     "postcss": "^8.4.5",
     "react-test-renderer": "^17.0.2",
+    "rollup": "^2.66.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-typescript2": "^0.31.1",
     "tailwindcss": "^3.0.15",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
